log/build_2024-03-28_20-13-03/py_srvcli/stderr.log
  File "/home/arjoe/ros_ws/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/aruco_client.py", line 58
    minimal_client.get_logger().info()'Service call failed %r' % (e,))
                                                                     ^
SyntaxError: unmatched ')'

